// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MatchFinalEntry Component. Current And Actual Match. Matches snapshot. 1`] = `
Array [
  <div
    classNames={
      Object {
        "enter": "",
        "enterActive": "foobar__interim--entering",
        "enterDone": "foobar__interim--entered",
        "exit": "",
        "exitActive": "foobar__interim--exiting",
        "exitDone": "foobar__interim--exited",
      }
    }
    in={false}
    mountOnEnter={true}
    onEntered={[Function]}
    onExited={[Function]}
    timeout={200}
    unmountOnExit={true}
  >
    <div
      className="foobar__interim"
      style={
        Object {
          "transition": "opacity 200ms ease-in-out",
        }
      }
    >
      <div
        className="participant participant-entry"
      >
        <div
          className="participant-entry__avatar"
        >
          <img
            alt="barfoo-1"
            src="foobar-1"
          />
        </div>
        <div
          className="participant-entry__name"
        >
          <strong>
            Fozbaz 1
          </strong>
        </div>
      </div>
    </div>
  </div>,
  <div
    classNames={
      Object {
        "enter": "",
        "enterActive": "foobar__interim--entering",
        "enterDone": "foobar__interim--entered",
        "exit": "",
        "exitActive": "foobar__interim--exiting",
        "exitDone": "foobar__interim--exited",
      }
    }
    in={false}
    mountOnEnter={true}
    onEntered={[Function]}
    onExited={[Function]}
    timeout={200}
    unmountOnExit={true}
  >
    <div
      className="foobar__interim"
      style={
        Object {
          "transition": "opacity 200ms ease-in-out",
        }
      }
    >
      <div
        className="participant participant-entry"
      >
        <div
          className="participant-entry__avatar"
        >
          <img
            alt="barfoo-2"
            src="foobar-2"
          />
        </div>
        <div
          className="participant-entry__name"
        >
          <strong>
            Fozbaz 2
          </strong>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`MatchFinalEntry Component. Current But Not Actual Match. Matches snapshot. 1`] = `
<div
  classNames={
    Object {
      "enter": "",
      "enterActive": "foobar__winner--entering",
      "enterDone": "foobar__winner--entered",
      "exit": "",
      "exitActive": "foobar__winner--exiting",
      "exitDone": "foobar__winner--exited",
    }
  }
  in={false}
  mountOnEnter={true}
  timeout={200}
  unmountOnExit={true}
>
  <div
    className="foobar__winner"
    style={
      Object {
        "transition": "opacity 200ms ease-in-out",
      }
    }
  >
    <div
      className="participant participant-entry"
    >
      <div
        className="participant-entry__avatar"
      >
        <img
          alt="barfoo-1"
          src="foobar-1"
        />
      </div>
      <div
        className="participant-entry__name"
      >
        <strong>
          Fozbaz 1
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`MatchFinalEntry Component. Not Current But Actual Match. Matches snapshot. 1`] = `
<div
  classNames={
    Object {
      "enter": "",
      "enterActive": "foobar__winner--entering",
      "enterDone": "foobar__winner--entered",
      "exit": "",
      "exitActive": "foobar__winner--exiting",
      "exitDone": "foobar__winner--exited",
    }
  }
  in={false}
  mountOnEnter={true}
  timeout={200}
  unmountOnExit={true}
>
  <div
    className="foobar__winner"
    style={
      Object {
        "transition": "opacity 200ms ease-in-out",
      }
    }
  >
    <div
      className="participant participant-entry"
    >
      <div
        className="participant-entry__avatar"
      >
        <img
          alt="barfoo-1"
          src="foobar-1"
        />
      </div>
      <div
        className="participant-entry__name"
      >
        <strong>
          Fozbaz 1
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`MatchFinalEntry Component. Not Current Nor Actual Match. Matches snapshot. 1`] = `
<div
  classNames={
    Object {
      "enter": "",
      "enterActive": "foobar__winner--entering",
      "enterDone": "foobar__winner--entered",
      "exit": "",
      "exitActive": "foobar__winner--exiting",
      "exitDone": "foobar__winner--exited",
    }
  }
  in={false}
  mountOnEnter={true}
  timeout={200}
  unmountOnExit={true}
>
  <div
    className="foobar__winner"
    style={
      Object {
        "transition": "opacity 200ms ease-in-out",
      }
    }
  >
    <div
      className="participant participant-entry"
    >
      <div
        className="participant-entry__avatar"
      >
        <img
          alt="barfoo-1"
          src="foobar-1"
        />
      </div>
      <div
        className="participant-entry__name"
      >
        <strong>
          Fozbaz 1
        </strong>
      </div>
    </div>
  </div>
</div>
`;
